# colorful_string

./: .gitignore  LICENSE  README.md  __init__.py  colors.py  pyproject.toml  setup.cfg  setup.py  utils.py
colorful_string/: __init__.py  colors.py  utils.py
src/colorful_text/: __init__.py  colors.py
