[metadata]
name = colorful_text
version = attr: colorful_text.__version__
license_files = LICENSE
url = https://github.com/RimuEirnarn/colorful_text
author = RimuEirnarn
author_email = rimuru720@proton.me
description = Add colors/styles to your string
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/RimuEirnarn/colorful_text

[options]
packages = colorful_text
python_require = >= 3.9
