[metadata]
name = colorful_string
version = attr: colorful_string.__version__
license_files = LICENSE
url = https://github.com/RimuEirnarn/colorful_string
author = RimuEirnarn
author_email = rimuru720@proton.me
description = Add colors/styles to your string
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/RimuEirnarn/colorful_string

[options]
packages = colorful_string
python_require = >= 3.9
